# datalab-app-plugin-example

./: .copier-answers.yml  CHANGELOG.md  INSTALL.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: reference.md
src/datalab_app_plugin_example/: __init__.py  _version.py  blocks.py
tests/: __init__.py  test_datalab_app_plugin_example.py
